--- a/sentence-practice.html
+++ b/sentence-practice.html
@@ -296,6 +296,12 @@
                     hint: '아침 인사입니다. 친한 사이에 사용합니다.'
                 },
                 {
+                    japanese: 'こんばんは',
+                    romaji: 'konbanwa',
+                    korean: '안녕하세요 (저녁)',
+                    hint: '저녁 인사입니다.'
+                },
+                {
                     japanese: 'さようなら',
                     romaji: 'sayounara',
                     korean: '안녕히 가세요',
@@ -306,6 +312,42 @@
                     romaji: 'oyasumi',
                     korean: '잘 자',
                     hint: '잠들기 전 하는 인사입니다.'
+                },
+                {
+                    japanese: 'ごめんなさい',
+                    romaji: 'gomennasai',
+                    korean: '미안해요',
+                    hint: '사과할 때 사용하는 표현입니다.'
+                },
+                {
+                    japanese: 'はい',
+                    romaji: 'hai',
+                    korean: '네',
+                    hint: '긍정의 대답입니다.'
+                },
+                {
+                    japanese: 'いいえ',
+                    romaji: 'iie',
+                    korean: '아니요',
+                    hint: '부정의 대답입니다.'
+                },
+                {
+                    japanese: 'わかりました',
+                    romaji: 'wakarimashita',
+                    korean: '알겠습니다',
+                    hint: '이해했음을 표현합니다.'
+                },
+                {
+                    japanese: 'どういたしまして',
+                    romaji: 'douitashimashite',
+                    korean: '천만에요',
+                    hint: '감사에 대한 응답입니다.'
+                },
+                {
+                    japanese: 'じゃあね',
+                    romaji: 'jaane',
+                    korean: '그럼 안녕',
+                    hint: '친구와 헤어질 때 하는 인사입니다.'
                 }
             ],
             basic: [
@@ -338,6 +380,66 @@
                     romaji: 'itadakimasu',
                     korean: '잘 먹겠습니다',
                     hint: '식사 전에 하는 인사입니다.'
+                },
+                {
+                    japanese: 'ごちそうさまでした',
+                    romaji: 'gochisousamadeshita',
+                    korean: '잘 먹었습니다',
+                    hint: '식사 후에 하는 인사입니다.'
+                },
+                {
+                    japanese: 'わたしは にほんじん です',
+                    romaji: 'watashi wa nihonjin desu',
+                    korean: '저는 일본인입니다',
+                    hint: '국적을 말할 때 사용합니다.'
+                },
+                {
+                    japanese: 'これは いくら ですか',
+                    romaji: 'kore wa ikura desuka',
+                    korean: '이것은 얼마입니까?',
+                    hint: '가격을 물어볼 때 사용합니다.'
+                },
+                {
+                    japanese: 'すきです',
+                    romaji: 'suki desu',
+                    korean: '좋아합니다',
+                    hint: '좋아하는 것을 표현할 때 사용합니다.'
+                },
+                {
+                    japanese: 'わかりません',
+                    romaji: 'wakarimasen',
+                    korean: '모르겠습니다',
+                    hint: '이해하지 못했을 때 사용합니다.'
+                },
+                {
+                    japanese: 'にほんごが はなせます',
+                    romaji: 'nihongo ga hanasemasu',
+                    korean: '일본어를 말할 수 있습니다',
+                    hint: '능력을 표현하는 문장입니다.'
+                },
+                {
+                    japanese: 'トイレは どこ ですか',
+                    romaji: 'toire wa doko desuka',
+                    korean: '화장실은 어디입니까?',
+                    hint: '화장실 위치를 물어볼 때 사용합니다.'
+                },
+                {
+                    japanese: 'かんこくじん です',
+                    romaji: 'kankokujin desu',
+                    korean: '한국인입니다',
+                    hint: '국적을 말하는 표현입니다.'
+                },
+                {
+                    japanese: 'これを ください',
+                    romaji: 'kore wo kudasai',
+                    korean: '이것을 주세요',
+                    hint: '물건을 요청할 때 사용합니다.'
+                },
+                {
+                    japanese: 'おいしい です',
+                    romaji: 'oishii desu',
+                    korean: '맛있습니다',
+                    hint: '음식이 맛있을 때 사용합니다.'
                 }
             ],
             intermediate: [
@@ -370,6 +472,66 @@
                     romaji: 'mata ashita',
                     korean: '또 내일 봐요',
                     hint: '친근한 작별 인사입니다.'
+                },
+                {
+                    japanese: 'たのしかった です',
+                    romaji: 'tanoshikatta desu',
+                    korean: '즐거웠습니다',
+                    hint: '과거의 즐거웠던 경험을 표현합니다.'
+                },
+                {
+                    japanese: 'てつだって ください',
+                    romaji: 'tetsudatte kudasai',
+                    korean: '도와주세요',
+                    hint: '도움을 요청할 때 사용합니다.'
+                },
+                {
+                    japanese: 'ゆっくり はなして ください',
+                    romaji: 'yukkuri hanashite kudasai',
+                    korean: '천천히 말해 주세요',
+                    hint: '천천히 말해달라고 부탁할 때 사용합니다.'
+                },
+                {
+                    japanese: 'にほんに いきたい です',
+                    romaji: 'nihon ni ikitai desu',
+                    korean: '일본에 가고 싶습니다',
+                    hint: '희망을 표현하는 문장입니다.'
+                },
+                {
+                    japanese: 'えいがを みに いきます',
+                    romaji: 'eiga wo mi ni ikimasu',
+                    korean: '영화를 보러 갑니다',
+                    hint: '목적을 가진 이동을 표현합니다.'
+                },
+                {
+                    japanese: 'しゅうまつは なにを しますか',
+                    romaji: 'shuumatsu wa nani wo shimasuka',
+                    korean: '주말에 무엇을 합니까?',
+                    hint: '계획을 물어보는 표현입니다.'
+                },
+                {
+                    japanese: 'とても きれい です',
+                    romaji: 'totemo kirei desu',
+                    korean: '매우 예쁩니다',
+                    hint: '아름다움을 표현하는 문장입니다.'
+                },
+                {
+                    japanese: 'あしたは やすみ です',
+                    romaji: 'ashita wa yasumi desu',
+                    korean: '내일은 쉬는 날입니다',
+                    hint: '휴일을 말할 때 사용합니다.'
+                },
+                {
+                    japanese: 'もう いちど いって ください',
+                    romaji: 'mou ichido itte kudasai',
+                    korean: '한 번 더 말해 주세요',
+                    hint: '다시 말해달라고 부탁할 때 사용합니다.'
+                },
+                {
+                    japanese: 'でんわばんごうを おしえて ください',
+                    romaji: 'denwabangou wo oshiete kudasai',
+                    korean: '전화번호를 알려주세요',
+                    hint: '연락처를 물어볼 때 사용합니다.'
                 }
             ]
         };
