--- a/sentence-practice.html
+++ b/sentence-practice.html
@@ -40,11 +40,13 @@
             background: #e9ecef;
             border: none;
             border-radius: 10px;
-            padding: 10px 15px;
+            padding: 8px 12px;
+            width : 12px; 
             cursor: pointer;
-            font-size: 18px;
-            margin-right: 15px;
+            font-size: 16px;
+            margin-right: 10px;
             transition: all 0.3s;
+            flex-shrink: 0;
         }
 
         .back-button:hover {
@@ -54,7 +56,7 @@
 
         h1 {
             color: #4facfe;
-            font-size: 28px;
+            font-size: 24px;
             flex: 1;
         }
 
