--- a/hiragana-practice.html
+++ b/hiragana-practice.html
@@ -47,6 +47,7 @@
             border: none;
             border-radius: 10px;
             padding: 10px 15px;
+            width: 12px;
             cursor: pointer;
             font-size: 18px;
             margin-right: 15px;
