--- a/hiragana-practice.html
+++ b/hiragana-practice.html
@@ -46,8 +46,8 @@
             background: #e9ecef;
             border: none;
             border-radius: 10px;
-            padding: 10px 15px;
-            width: 12px;
+            padding: 10px ;
+            
             cursor: pointer;
             font-size: 18px;
             margin-right: 15px;
