Modify back button padding and width
Adjusted padding and width for back button styling.

--- a/sentence-practice.html
+++ b/sentence-practice.html
@@ -40,8 +40,8 @@
             background: #e9ecef;
             border: none;
             border-radius: 10px;
-            padding: 8px 12px;
-            width : 12px; 
+            padding: 8px;
+            
             cursor: pointer;
             font-size: 16px;
             margin-right: 10px;
