--- a/sentence-practice.html
+++ b/sentence-practice.html
@@ -41,7 +41,7 @@
             border: none;
             border-radius: 10px;
             padding: 8px;
-            
+            width: 20px;   
             cursor: pointer;
             font-size: 16px;
             margin-right: 10px;
