--- a/sentence-practice.html
+++ b/sentence-practice.html
@@ -40,7 +40,7 @@
             background: #e9ecef;
             border: none;
             border-radius: 10px;
-            padding: 8px;
+            padding: 1px 1px;
             width: 10px;   
             cursor: pointer;
             font-size: 16px;
