--- a/hiragana-practice.html
+++ b/hiragana-practice.html
@@ -45,13 +45,20 @@
         .back-button {
             background: #e9ecef;
             border: none;
-            border-radius: 10px;
-            padding: 10px ;
-            
+            border-radius: 8px;
+            padding: 0;                    /* padding을 0으로 */
+            width: 36px;
+            height: 36px;
             cursor: pointer;
-            font-size: 18px;
-            margin-right: 15px;
+            font-size: 16px;
+            margin-right: 10px;
             transition: all 0.3s;
+            flex-shrink: 0;
+            display: flex;                 /* 추가 */
+            align-items: center;           /* 추가 */
+            justify-content: center;       /* 추가 */
+            min-width: 36px;               /* 추가 */
+            max-width: 36px;               /* 추가 */
         }
 
         .back-button:hover {
