--- a/hiragana-practice.html
+++ b/hiragana-practice.html
@@ -31,9 +31,9 @@
         }
 
         h1 {
-            color: #667eea;
-            font-size: 28px;
-            flex: 1;
+            color: #667eea;  /* 히라가나는 #667eea, 문장연습은 #4facfe */
+            font-size: 24px;
+            flex: none;      /* flex: 1에서 flex: none으로 */
         }
 
         .header {
