--- a/hiragana-practice.html
+++ b/hiragana-practice.html
@@ -200,7 +200,7 @@
     <div class="container">
         <div class="header">
             <button class="back-button" onclick="goBack()">←</button>
-            <h1>🇯🇵 히라가나 따라쓰기</h1>
+            <h1>✏️ 히라가나 따라쓰기</h1>
         </div>
         
         <div class="category-selector">
