--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📚 일본어 학습 앱</h1>
+        <h1>📚 日本語 학습 앱</h1>
         <p class="subtitle">히라가나부터 문장까지 차근차근 배워보세요</p>
 
         <div class="menu-grid">
