--- a/hiragana-practice.html
+++ b/hiragana-practice.html
@@ -145,6 +145,16 @@
             transform: translateY(-2px);
         }
 
+        .btn-prev {
+            background: #74c0fc;
+            color: white;
+        }
+
+        .btn-prev:hover {
+            background: #4dabf7;
+            transform: translateY(-2px);
+        }
+
         .btn-show-guide {
             background: #ffd43b;
             color: #333;
@@ -249,6 +259,7 @@
         <div class="controls">
             <button class="btn-clear" onclick="clearCanvas()">지우기</button>
             <button class="btn-show-guide" onclick="toggleGuide()">가이드</button>
+            <button class="btn-prev" onclick="prevCharacter()">이전</button>
             <button class="btn-next" onclick="nextCharacter()">다음</button>
         </div>
     </div>
@@ -483,6 +494,14 @@
         function nextCharacter() {
             const categoryData = hiraganaData[currentCategory];
             currentIndex = (currentIndex + 1) % categoryData.length;
+            updateDisplay();
+            clearCanvas();
+            drawGuideCharacter();
+        }
+
+        function prevCharacter() {
+            const categoryData = hiraganaData[currentCategory];
+            currentIndex = (currentIndex - 1 + categoryData.length) % categoryData.length;
             updateDisplay();
             clearCanvas();
             drawGuideCharacter();
